--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: anusha080/backend:1.0.0
+        image: joindevops/backend1.0.0
 ---
 kind: Service
 apiVersion: v1
